--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ src_path = {toxinidir}/src/
 lib_path = {toxinidir}/lib/
 unit_test_path = {toxinidir}/tests/unit/
 integration_test_path = {toxinidir}/tests/integration/
-all_path = {[vars]src_path} {[vars]unit_test_path} {[vars]integration_test_path}
+all_path = {[vars]lib_path} {[vars]src_path} {[vars]unit_test_path} {[vars]integration_test_path}
 
 [testenv]
 setenv =
